--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation.components": "file:C:/Users/darra/Documents/_sem8/Gesture Based UIE/NavMeshComponents-package",
+    "com.unity.ai.navigation.components": "file:C:/Users/Anto/Downloads/NavMeshComponents-package/NavMeshComponents-package",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.20",
+    "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "2.1.1",
-    "com.unity.timeline": "1.2.17",
+    "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
     "com.unity.xr.management": "4.0.1",
