Zombies die, axe in city scene, distance grab on all 'grab' layer objects

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation.components": "file:C:/Users/Anto/Downloads/NavMeshComponents-package/NavMeshComponents-package",
+    "com.unity.ai.navigation.components": "file:C:/Users/darra/Documents/_sem8/Gesture Based UIE/NavMeshComponents-package",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
